# eaclaw

./: .gitignore  .gitmodules  BENCHMARKS.md  CLAUDE.md  Cargo.toml  EACLAW.md  MEASURING.md  PLAN.md  README.md  build.sh  eaclaw.txt  peter.txt  setup.sh  v2_plan.md
benches/: safety_bench.rs
bridge/: go.mod  go.sum  main.go
crates/eaclaw-core/: Cargo.toml  build.rs
crates/eaclaw-core/csrc/: eaclaw_generate.cpp
crates/eaclaw-core/examples/: bench_recall.rs  bench_router.rs  perf_hotpath.rs  perf_multicore.rs
crates/eaclaw-core/src/: config.rs  error.rs  lib.rs  persist.rs  recall.rs
crates/eaclaw-core/src/agent/: ainur.rs  background.rs  mod.rs  router.rs  tool_dispatch.rs
crates/eaclaw-core/src/channel/: gateway.rs  mod.rs  repl.rs  types.rs  wa_loop.rs  whatsapp.rs
crates/eaclaw-core/src/kernels/: arg_tokenizer.rs  byte_classifier.rs  command_router.rs  ffi.rs  fused_safety.rs  json_scanner.rs  leak_scanner.rs  mod.rs  sanitizer_kernel.rs  search.rs
crates/eaclaw-core/src/llm/: anthropic.rs  eakv_ffi.rs  llama_ffi.rs  local.rs  mod.rs  tool_parse.rs
crates/eaclaw-core/src/safety/: leak_detector.rs  mod.rs  sanitizer.rs  shell_guard.rs  validator.rs
crates/eaclaw-core/src/tools/: bench_tool.rs  calc.rs  cpu.rs  define.rs  echo.rs  git.rs  grep.rs  http.rs  json_tool.rs  ls.rs  memory.rs  mod.rs  read_file.rs  remind.rs  shell.rs  summarize.rs  time.rs  tokens.rs  translate.rs  weather.rs  write_file.rs
crates/eaclaw-core/tests/: edge_cases.rs  local_llm_bench.rs  local_llm_test.rs  recall_bench.rs  recall_integration.rs  tool_integration.rs
eaclaw-cli/: Cargo.toml
eaclaw-cli/src/: main.rs
kernels/: byte_classifier.ea  byte_classifier.ea.json  command_router.ea  command_router.ea.json  fused_safety.ea  fused_safety.ea.json  json_scanner.ea  json_scanner.ea.json  leak_scanner.ea  leak_scanner.ea.json  sanitizer.ea  sanitizer.ea.json  search.ea  search.ea.json  search_avx512.ea
(+3 files in other folders)
