[workspace]
members = ["crates/eaclaw-core", "eaclaw-cli"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
eaclaw-core = { path = "crates/eaclaw-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"

[profile.release]
lto = true
codegen-units = 1
